--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,17 @@ body {
 }
 
 p {
-	font-size: 18px;
+	font-size: 20px;
+	font-family: 'Noto Serif', serif;
 }
 
 h1, h3 {	
 	font-family: 'Merriweather', serif;
+}
+
+li {
+	font-family: 'Droid Sans', sans-serif;
+	font-size: 16px;
 }
 
 .nav-list-item {
